[package]
name = "jitstreamer-eb"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["json", "macros", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }
axum-macros = { version = "0.5" }
axum-client-ip = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = { version = "0.11" }
log = { version = "0.4" }
idevice = { version = "0.1.20", features = [
  "heartbeat",
  "mounter",
  "tcp",
  "installation_proxy",
  "tss",
] }
plist = { version = "1.7" }
sqlite = { version = "0.36" }
wg-config = { git = "https://github.com/jkcoxson/wg-config" }
bytes = { version = "1.9" }
sha2 = { version = "0.10" }
dotenvy = { version = "0.15" }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
